tuto preklad, login errmsg preklad

--- a/harenecPoll/languages/en.json
+++ b/harenecPoll/languages/en.json
@@ -8,19 +8,19 @@
     "login_username": "Username:",
     "login_password": "Password:",
     "login_button": "LOGIN",
-    "login_empty_username": "",
-    "login_empty_password": "",
-    "login_error_after_submit": "",
+    "login_empty_username": "Enter username",
+    "login_empty_password": "Enter password",
+    "login_error_after_submit": "Wrong username or password",
     
     "register_page_nav": "Registration",
     "register_header": "Registration",
     "register_username": "Username:",
     "register_password": "Password:",
     "register_button": "REGISTER",
-    "register_empty_username": "",
-    "register_empty_password": "",
-    "register_username_length": "",
-    "register_password_length": "",
+    "register_empty_username": "Enter username",
+    "register_empty_password": "Enter password",
+    "register_username_length": "Username length must be between 6 and 32",
+    "register_password_length": "Required password length is min. 6 a max. 255",
     "register_username_wrong_chars": "",
     "register_error_after_submit": "",
     "register_username_exists": "",
