--- a/harenecPoll/languages/sk.json
+++ b/harenecPoll/languages/sk.json
@@ -8,20 +8,20 @@
     "login_username": "Prihlasovacie meno:",
     "login_password": "Heslo:",
     "login_button": "PRIHLÁSIŤ",
-    "login_empty_username": "",
-    "login_empty_password": "",
-    "login_error_after_submit": "",
+    "login_empty_username": "Zadajte prihlasovacie meno",
+    "login_empty_password": "Zadajte heslo",
+    "login_error_after_submit": "Nesprávne meno alebo heslo",
     
     "register_page_nav": "Registrácia",
     "register_header": "Registrácia",
     "register_username": "Používateľské meno:",
     "register_password": "Heslo:",
     "register_button": "ZAREGISTROVAŤ",
-    "register_empty_username": "",
-    "register_empty_password": "",
-    "register_username_length": "",
-    "register_password_length": "",
-    "register_username_wrong_chars": "",
+    "register_empty_username": "Zadajte prihlasovacie meno",
+    "register_empty_password": "Zadajte heslo",
+    "register_username_length": "Login musi mat min. 6 a max. 32 znakov",
+    "register_password_length": "Heslo musí mať min. 6 a max. 255 znakov",
+    "register_username_wrong_chars": "Login môže obsahovať iba veľké, malé písmená, číslice a podtržník",
     "register_error_after_submit": "",
     "register_username_exists": "",
     
